# seal

./: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: deploy-gh-pages.yaml  deploy.yml
crates/seal-cli/: Cargo.toml  README.md
crates/seal-cli/src/: check.rs  lib.rs  main.rs  wasm.rs
crates/seal-cli/tests/: integration_tests.rs
crates/seal-ty/: CLAUDE.md  Cargo.toml  README.md
crates/seal-ty/src/: constants.rs  context.rs  infer.rs  lib.rs  parse.rs  sir.rs  symbol.rs  ty.rs
crates/seal-ty/src/builder/: build.rs  mod.rs  sir.rs
crates/seal-ty/src/checker/: check.rs  class.rs  context.rs  errors.rs  expr.rs  function.rs  mod.rs  narrow.rs  satisfies.rs  scope.rs
crates/seal-ty/src/checker/base/: decl.rs  expr.rs  mod.rs  narrow.rs  satisfies.rs  stmt.rs  ts_type.rs  widen.rs
crates/seal-ty/src/intern/: interned.rs  interner.rs  mod.rs
crates/seal-ty/src/kind/: infer.rs  mod.rs
crates/seal-ty/src/sema/: air.rs  build.rs  mod.rs
crates/seal-ty/src/type_builder/: mod.rs
crates/seal-ty/tests/: build.rs  check.rs  satisfies.rs
crates/seal-ty/tests/check/: arrays.rs  classes.rs  control_flow.rs  error_handling.rs  functions.rs  lib.rs  literals.rs  loops.rs  mod.rs  objects.rs  operators.rs  primitives.rs  switch_statements.rs  templates_regex.rs  unions.rs  variables.rs
crates/seal-ty/tests/check/common/: mod.rs
web/: .gitignore  CLAUDE.md  README.md  biome.json  build-wasm.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
web/src/: App.css  App.jsx  App.tsx  MonacoEditor.jsx  MonacoEditor.tsx  index.css  main.tsx  types.ts
