[package]
name = "seal-cli"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "seal"
path = "src/main.rs"

[dependencies]
seal-ty = { path = "../seal-ty" }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"