[package]
name = "seal-cli"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "seal"
path = "src/main.rs"

[dependencies]
seal-ty = { path = "../seal-ty" }
clap = { version = "4.5", features = ["derive"] }
swc_common = "5"
swc_ecma_parser = "6"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# Debug build profile for WASM
[profile.dev]
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
debug = true  # Keep debug info even in release builds for better error traces
lto = false   # Disable LTO to preserve stack traces
